# Conduit

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STAGES.txt  README.md  ai_wallet_tasks.txt  conduit_tasks.txt  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
Conduit-website/: README.md  package.json  vercel.json
Conduit-website/.lovable/: plan.md
Conduit-website/src/: routeTree.gen.ts  styles.css
docs/: 01-litellm-audit.md  02-architecture.md  03-data-model.md  04-api-contracts.md  05-security-model.md  06-partner-pricing.md  07-implementation-phases.md  README.md
docs/decisions/: ADR-001-litellm-strategy.md
openapi/: gateway.yaml  wallet-api.yaml
schemas/: 001_initial.sql  002_oauth_and_apps.sql  003_settlement.sql
scripts/: run_settlement.py  sandbox_seed.sql  seed_sandbox.py
services/app/: main.py
services/gateway/: access.py  allowance_cache.py  authorize.py  balance_cache.py  billing.py  deps.py  mock_provider.py  rate_limit.py  router.py  service.py  usage_queue.py  worker.py
services/pricing/: deps.py  engine.py  rules.py
services/shared/: config.py  db.py  db_sync.py  logging.py  middleware.py  models.py  redis_client.py
services/wallet/: access_groups.py  app_registrations.py  apps.py  auth.py  balance.py  deps.py  google_oauth.py  keys.py  ledger.py  oauth.py  partner_connect.py  payments.py  settlement.py  settlement_scheduler.py  usage.py
tests/: conftest.py
tests/integration/: test_access_groups_api.py  test_apps_api.py  test_auth_api.py  test_health.py  (+15 more)
(+83 files in other folders)
